[gd_scene load_steps=5 format=3 uid="uid://chnpc6hbsm7wl"]

[ext_resource type="Script" path="res://scenes/main_menu.gd" id="1_repcp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q14sw"]
bg_color = Color(0.298989, 0.191469, 0.527052, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nhym1"]
bg_color = Color(0.298039, 0.192157, 0.52549, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_color = Color(0.821789, 0.821789, 0.821789, 0.6)
shadow_size = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rbb4k"]
bg_color = Color(0.298039, 0.192157, 0.52549, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_repcp")

[node name="bt_start game" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -151.0
offset_top = -199.0
offset_right = 147.0
offset_bottom = -118.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.808998, 0.808998, 0.808998, 1)
theme_override_colors/font_hover_color = Color(0.991164, 0.991164, 0.991164, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_q14sw")
theme_override_styles/hover = SubResource("StyleBoxFlat_nhym1")
theme_override_styles/pressed = SubResource("StyleBoxFlat_rbb4k")
text = "Start Game"

[node name="bt_options" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -151.0
offset_top = -74.0
offset_right = 147.0
offset_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.808998, 0.808998, 0.808998, 1)
theme_override_colors/font_hover_color = Color(0.991164, 0.991164, 0.991164, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_q14sw")
theme_override_styles/hover = SubResource("StyleBoxFlat_nhym1")
theme_override_styles/pressed = SubResource("StyleBoxFlat_rbb4k")
text = "Options"

[node name="bt_Exit game" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -151.0
offset_top = 51.0
offset_right = 147.0
offset_bottom = 132.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.808998, 0.808998, 0.808998, 1)
theme_override_colors/font_hover_color = Color(0.991164, 0.991164, 0.991164, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_q14sw")
theme_override_styles/hover = SubResource("StyleBoxFlat_nhym1")
theme_override_styles/pressed = SubResource("StyleBoxFlat_rbb4k")
text = "Exit"

[node name="lb_game name" type="Label" parent="."]
texture_filter = 2
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -306.0
offset_top = -20.0
offset_right = 305.0
offset_bottom = 119.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 8
theme_override_constants/shadow_outline_size = 20
theme_override_font_sizes/font_size = 60
text = "Bald Shroom Coding"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="bt_start game" to="." method="_on_bt_start_game_pressed"]
[connection signal="pressed" from="bt_options" to="." method="_on_bt_options_pressed"]
[connection signal="pressed" from="bt_Exit game" to="." method="_on_bt_exit_game_pressed"]
